[package]
name = "rrsa"
version = "0.1.0"
authors = ["Corentin BROSSUTTI"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
rand = "0.8"
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
